# PixelLight

./: .gitignore  AUTHORS  CMakeLists.txt  Diary.txt  README
CMake/: Config.cmake  Platform.cmake  Project.cmake
Engine/: CMakeLists.txt
Engine/PLCore/: CMakeLists.txt
Engine/PLCore/Private/PLCore/: PLCore.cpp  Runtime.cpp
Engine/PLCore/Private/PLCore/+Linux/: PLCoreLinux.cpp
Engine/PLCore/Private/PLCore/Application/: ApplicationContext.cpp  CoreApplication.cpp
Engine/PLCore/Private/PLCore/Config/: Config.cpp  ConfigLoader.cpp  ConfigLoaderPL.cpp  CoreConfigGroup.cpp
Engine/PLCore/Private/PLCore/Core/: AbstractContext.cpp
Engine/PLCore/Private/PLCore/File/: File.cpp  FileObject.cpp  FileStdStream.cpp
Engine/PLCore/Private/PLCore/File/+Linux/: FileLinux.cpp  FileSearchLinux.cpp
Engine/PLCore/Private/PLCore/File/+Windows/: FileSearchWindows.cpp  FileWindows.cpp
Engine/PLCore/Private/PLCore/File/+Zip/: FileSearchZip.cpp  FileZip.cpp  ZipHandle.cpp
Engine/PLCore/Private/PLCore/Frontend/: Frontend.cpp  FrontendApplication.cpp  FrontendContext.cpp  FrontendImpl.cpp  FrontendOpenGL.cpp  FrontendPixelLight.cpp
Engine/PLCore/Private/PLCore/Module/: Module.cpp
Engine/PLCore/Private/PLCore/Reflection/: Class2.cpp  ClassConstructor.cpp  ClassField.cpp  ClassManager2.cpp  ClassMethod.cpp  ClassProperty.cpp  ClassTypeInfo.cpp  DefaultValue.cpp  DynamicObject.cpp  PrimitiveTypeInfo.cpp  TypeInfo.cpp  TypeRegistry.cpp
Engine/PLCore/Private/PLCore/Registry/: Registry.cpp
Engine/PLCore/Private/PLCore/Registry/+Windows/: RegistryWindows.cpp
Engine/PLCore/Private/PLCore/Script/: Script.cpp  ScriptBinding.cpp  ScriptManager.cpp
Engine/PLCore/Private/PLCore/String/: BufferedReaderFile.cpp  String.cpp  StringBufferASCII.cpp  StringBufferUnicode.cpp  UTF8Tools.cpp
Engine/PLCore/Private/PLCore/System/: DynLib.cpp  Mutex.cpp  Pipe.cpp  Process.cpp  Semaphore.cpp  System.cpp  Thread.cpp
Engine/PLCore/Private/PLCore/System/+Linux/: ConsoleLinux.cpp  DynLibLinux.cpp  MutexLinux.cpp  SemaphoreLinux.cpp  SystemLinux.cpp  ThreadLinux.cpp
Engine/PLCore/Private/PLCore/System/+Windows/: ConsoleWindows.cpp  DynLibWindows.cpp  MutexWindows_CriticalSection.cpp  MutexWindows_Mutex.cpp  SemaphoreWindows.cpp  SystemWindows.cpp  ThreadWindows.cpp
Engine/PLCore/Private/PLCore/Tools/: Chunk.cpp  ChunkLoader.cpp  ChunkLoaderPL.cpp  ChunkLoaderPLXml.cpp  CommandLineOption.cpp  Loadable.cpp  LoadableManager.cpp  LoadableType.cpp  Loader.cpp  LoaderImpl.cpp  LocalizationGroup.cpp  LocalizationLoader.cpp  LocalizationLoaderPL.cpp
Engine/PLCore/Private/PLCore/Typebase/: FunctionSignature.cpp
Engine/PLCore/Public/PLCore/: Main.h  ModuleMain.h  PLCore.h
Engine/PLCore/Public/PLCore/+Linux/: PLCoreLinux.h
Engine/PLCore/Public/PLCore/+Windows/: PLCoreWindows.h
Engine/PLCore/Public/PLCore/Application/: ApplicationContext.h  CoreApplication.h
Engine/PLCore/Public/PLCore/Base/Type/: TypePtr.inl
Engine/PLCore/Public/PLCore/Config/: Config.h  ConfigLoader.h  ConfigLoaderPL.h  CoreConfigGroup.h
Engine/PLCore/Public/PLCore/Container/: QueueIterator.h  QueueIterator.inl  ResourceManager.h  StackIterator.h  StackIterator.inl
Engine/PLCore/Public/PLCore/Core/: AbstractContext.h  MemoryManager.h  MemoryManagerOnlyOncePerProject.inl
Engine/PLCore/Public/PLCore/Event/: Signal.h  Signal.inl  Slot.h  Slot.inl
Engine/PLCore/Public/PLCore/File/: File.h
Engine/PLCore/Public/PLCore/File/+Windows/: FileSearchWindows.h
Engine/PLCore/Public/PLCore/File/+Zip/: FileSearchZip.h  FileZip.h
Engine/PLCore/Public/PLCore/Frontend/: Frontend.h  FrontendApplication.h  FrontendContext.h  FrontendImpl.h  FrontendOpenGL.h  FrontendPixelLight.h
Engine/PLCore/Public/PLCore/Log/: Log.h
Engine/PLCore/Public/PLCore/Module/: Module.h  ModuleID.h
Engine/PLCore/Public/PLCore/Reflection/: Class.h  Class.inl  ClassBuilder.h  ClassBuilder.inl  ClassConstructor.h  ClassConstructor.inl  ClassField.h  ClassField.inl  ClassManager.h  ClassManager.inl  ClassMethod.h  ClassMethod.inl  ClassProperty.h  ClassProperty.inl  ClassTypeInfo.h  ClassTypeInfo.inl  DefaultValue.h  DefaultValue.inl  DynamicObject.h  DynamicObject.inl  PrimitiveTypeInfo.h  PrimitiveTypes.inl  Rtti.h  RttiMacros.h  TagHolder.h  TagHolder.inl  TypeId.h  TypeInfo.h  TypeInfo.inl  TypeRegistry.h  TypeRegistry.inl
Engine/PLCore/Public/PLCore/Registry/+Windows/: RegistryWindows.h
Engine/PLCore/Public/PLCore/Script/: FuncScriptPtr.h  Script.h  ScriptBinding.h  ScriptManager.h  ScriptManager.inl
Engine/PLCore/Public/PLCore/System/+Linux/: SystemLinux.h
Engine/PLCore/Public/PLCore/System/+Windows/: DynLibWindows.h  MutexWindows_CriticalSection.h  MutexWindows_Mutex.h  SemaphoreWindows.h  SystemWindows.h  ThreadWindows.h
Engine/PLCore/Public/PLCore/Tools/: Chunk.h  ChunkLoader.h  ChunkLoaderPL.h  ChunkLoaderPLXml.h  LoadableManager.h  LoaderImpl.h  LocalizationGroup.h  LocalizationLoader.h  LocalizationLoaderPL.h
Engine/PLCore/Public/PLCore/Typebase/: Constructor.h  Constructor.inl  Destructor.h  Destructor.inl  Function.h  Function.inl  FunctionBase.h  FunctionSignature.h  FunctionSignature.inl  Invokable.h  RawType.h  Tuple.h  TypeTraits.h  UntypedVariant.h
PixelLight/: PixelLight.cmake
Plugins/: CMakeLists.txt
Plugins/PLScriptLua/: CMakeLists.txt
Plugins/PLScriptLua/Private/PLScriptLua/: RTTIObjectPointerBase.cpp  RTTIObjectSignalPointerBase.cpp
Plugins/PLScriptLua/Public/PLScriptLua/: LuaContext.inl  RTTIObjectPointerBase.h  RTTIObjectSignalPointerBase.h
Plugins/PLScriptLua/include/PLScriptLua/: LuaContext.h  LuaContext.inl  PLScriptLua.h  RTTIObjectSignalMethodPointer.h  RTTIObjectSignalPointerBase.h  RTTIObjectSlotPointer.h  Script.h
Plugins/PLScriptLua/src/: RTTIObjectPointerBase.cpp  RTTIObjectSignalMethodPointer.cpp  RTTIObjectSignalPointerBase.cpp  RTTIObjectSlotPointer.cpp  Script.cpp
Plugins/PLSoundOpenAL/: CMakeLists.txt
Plugins/PLSoundOpenAL/include/PLSoundOpenAL/: SoundManager.h
Plugins/PLSoundOpenAL/src/: SoundManager.cpp
Tools/: CMakeLists.txt
Tutorial/: CMakeLists.txt  Readme.txt
cmake/: Diary.txt  (+6 more)
(+1947 files in other folders)
